Fixing the links

--- a/activities.html
+++ b/activities.html
@@ -26,16 +26,16 @@
     </div>
     <ul class="nav-links">
       <li>
-        <a href="/index.html">Home</a>
+        <a href="index.html">Home</a>
       </li>
       <li>
         <a href="#">About Us</a>
       </li>
       <li>
-        <a href="/activities.html">Activities</a>
+        <a href="activities.html">Activities</a>
       </li>
       <li>
-        <a href="/register.html">Register Your Interest</a>
+        <a href="register.html">Register Your Interest</a>
       </li>
     </ul>
     <div class="spacebar">
@@ -52,7 +52,7 @@
 
   <div class="banner">
     <div class="banner-container">
-      <p style="font-family: Roboto Slab">PLACEHOLDER TEXT</p>
+      <p style="font-family: Roboto Slab">ACTIVITIES</p>
     </div>
   </div>
 
