--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
 
   <div class="banner">
     <div class="banner-container">
-      <p style="font-family: Roboto Slab">PLACEHOLDER TEXT</p>
+      <p style="font-family: Roboto Slab">REGISTER</p>
     </div>
   </div>
   <br>
