--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
     </div>
     <ul class="nav-links">
       <li>
-        <a href="/index.html">Home</a>
+        <a href="index.html">Home</a>
       </li>
       <li>
         <a href="#">About Us</a>
       </li>
       <li>
-        <a href="/activities.html">Activities</a>
+        <a href="activities.html">Activities</a>
       </li>
       <li>
-        <a href="/register.html">Register Your Interest</a>
+        <a href="register.html">Register Your Interest</a>
       </li>
     </ul>
     <div class="spacebar">
