--- a/register.html
+++ b/register.html
@@ -17,14 +17,36 @@
 <!-- Below is where the actual coding is done! -->
 
 <body>
-  <a href="activities.html">ACTIVITIES LINK</a>
-  <a href="index.html">HOMEPAGE LINK</a>
+  
 
-  <!-- Surovi: Navigation bar starts here! -->
+    <!-- Surovi: Navigation bar starts here! -->
 
-  Code here Surovi
-
-  <!-- Navigation bar ends here! -->
+    <nav>
+      <div class="logo">
+        <h4>SPACE HOLIDAY</h4>
+      </div>
+      <ul class="nav-links">
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="#">About Us</a>
+        </li>
+        <li>
+          <a href="activities.html">Activities</a>
+        </li>
+        <li>
+          <a href="register.html">Register Your Interest</a>
+        </li>
+      </ul>
+      <div class="spacebar">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
+  
+    <!-- Navigation bar ends here! -->
 
 
   <!-- Charlotte: Banner starts here! -->
