Changed banner images

--- a/activities.html
+++ b/activities.html
@@ -50,7 +50,7 @@
 
   <!-- Charlotte: Banner starts here! -->
 
-  <div class="banner">
+  <div class="banner-activities">
     <div class="banner-container">
       <p style="font-family: Roboto Slab">ACTIVITIES</p>
     </div>
