--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
 
   <!-- Charlotte: Banner starts here! -->
 
-  <div class="banner">
+  <div class="banner-register">
     <div class="banner-container">
       <p style="font-family: Roboto Slab">REGISTER</p>
     </div>
