Final changes (hopefully)

--- a/index.html
+++ b/index.html
@@ -22,14 +22,11 @@
 
   <nav>
     <div class="logo">
-      <h4>SPACE HOLIDAY</h4>
+      <h4>SPACE HOLIDAYS</h4>
     </div>
     <ul class="nav-links">
       <li>
         <a href="index.html">Home</a>
-      </li>
-      <li>
-        <a href="#">About Us</a>
       </li>
       <li>
         <a href="activities.html">Activities</a>
