Fixed alert button

--- a/register.html
+++ b/register.html
@@ -127,8 +127,9 @@
         <br />
       </p>
     </div>
-    <div id="submitbtn">
-      <input type="submit" value="Submit" name="submit" />
+    <div class="button">
+  
+      <button type="button" onclick="alert('Thank you. We will be in touch soon.')">Submit</button>
     </div>
   </form>
 
