fixed button styling and added banner lines

--- a/register.html
+++ b/register.html
@@ -127,9 +127,9 @@
         <br />
       </p>
     </div>
-    <div class="button">
+    <div>
   
-      <button type="button" onclick="alert('Thank you. We will be in touch soon.')">Submit</button>
+      <button class="submitbtn" type="button" onclick="alert('Thank you. We will be in touch soon.')">Submit</button>
     </div>
   </form>
 
